add JWT
